# Cellulose

./: .gitignore  2  3  CMakeLists.txt  Makefile  README.md  \  asl_test.csv  cellulose_log.txt  downloading.md  empty.csv  log.txt  output.txt  run.sh  test.csv  tests.out  valgrind_log.txt
src/: a  cell.c  cell.h  client.c  client.h  client_structs.h  config.h  config_include.h  debug.c  debug.h  main.c  messages.c  messages.h  parsing.c  parsing.h  saving.c  str.c  str.h  vec.h
src/cli/: README.md  cli_ui.h  cursor_ui.h  spreadsheet_ui.h  tui.h
src/commands/: README.md  basic_cmd.h  cmd.c  cmd.h  hash.py  jump_cmd.c  jump_cmd.h  rand_cmds.c  rand_cmds.h  system_cmd.c  system_cmd.h
src/cursor/: README.md  cursor.c  cursor.h  cursor_include.h
src/formatting/: README.md  parse_bytecode.c  parse_bytecode.h  parse_expr.c  parse_expr.h
src/ui/: cli_ui.c  cli_ui.h  cursor_ui.h  spreadsheet_ui.c  spreadsheet_ui.h  tui.h
src/vim_bindings/: README.md  command_repeat.h  vim_bindings.h  vim_copy_pasting.c  vim_copy_pasting.h  vim_cursor_movement.c  vim_cursor_movement.h  vim_insert_mode.c  vim_insert_mode.h  vim_normal_mode.h  vim_visual_transitions.h
tests/: a.out  cell_tests.c  cellulose_test  csv_tests.c  formatting_tests.c  str_test.c  test.c  tests.h  tests.out
tests/csvs/: formatting_test.csv  int_and_str.csv  long_cells.csv  lots_of_lines.csv  multiple_lines.csv  single_row.csv
